# Pomodoro

./: AAPL_5Y_1D_research_format.csv  AGENTS.md  App.tsx  README.md  index.css  index.html  install.sh  metadata.json  package-lock.json  package.json  start.sh  tailwind.config.cjs  types.ts  utils.ts  vite.config.ts
components/: BreakPrompt.tsx  Header.tsx  ModeSwitchPrompt.tsx  RestEndPrompt.tsx  StatsSection.tsx  TaskSection.tsx  TimerDisplay.tsx
pages/: Home.tsx  TodoList.tsx
public/sounds/: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
