[package]
name = "pomodoro-desk"
version = "0.1.0"
description = "Offline Pomodoro timer and task tracker."
authors = ["Firework"]
edition = "2021"
rust-version = "1.74"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
